"""
routes.py
---------
Defines core data transfer objects related to routing operations in SafeNav:
- RouteRequest
- RouteCandidate / RouteCandidates
- RouteScore / RouteScores
- RouteResponse
"""

from typing import Optional

from pydantic import BaseModel, Field

from .common import Path, Point, ResponseMetadata, RoutePreferences


# === Route Request ===

class RouteRequest(BaseModel):
    """Represents a route request made by the user through the API."""

    origin: Point = Field(
        ...,
        description="Starting point of the route",
    )
    destination: Point = Field(
        ...,
        description="Destination point of the route",
    )
    preferences: RoutePreferences = Field(
        default_factory=RoutePreferences,
        description="User-defined routing preferences",
    )


# === Route Candidates ===

class RouteCandidate(BaseModel):
    """Represents a route candidate computed by the Routing Engine."""

    id: str = Field(
        ...,
        min_length=1,
        description="Unique identifier of the route candidate",
    )
    geometry: Path = Field(
        ...,
        description="Ordered graph path forming the route",
    )
    eta: float = Field(
        ...,
        gt=0,
        description="Estimated route duration in seconds",
    )
    distance: float = Field(
        ...,
        gt=0,
        description="Route distance in meters",
    )


class RouteCandidates(BaseModel):
    """Collection of route candidates generated for a request."""

    request_id: str = Field(
        ...,
        min_length=1,
        description="Identifier of the associated route request",
    )
    items: list[RouteCandidate] = Field(
        ...,
        min_length=1,
        description="Route candidates generated by the Routing Engine",
    )


# === Route Scores ===

class SegmentScore(BaseModel):
    """Safety and comfort scores associated with a route segment."""

    segment_id: str = Field(
        ...,
        min_length=1,
        description="Identifier of the route segment",
    )
    comfort: float = Field(
        ...,
        ge=0,
        le=1,
        description="Comfort score between 0 and 1",
    )
    safety: float = Field(
        ...,
        ge=0,
        le=1,
        description="Safety score between 0 and 1",
    )


class RouteScore(BaseModel):
    """Aggregated safety and comfort scores for one route."""

    route_id: str = Field(
        ...,
        min_length=1,
        description="Identifier of the route being scored",
    )
    comfort_score: float = Field(
        ...,
        ge=0,
        le=1,
        description="Global comfort score for the route",
    )
    safety_score: float = Field(
        ...,
        ge=0,
        le=1,
        description="Global safety score for the route",
    )
    segment_scores: list[SegmentScore] = Field(
        default_factory=list,
        description="Detailed scores for individual route segments",
    )


class RouteScores(BaseModel):
    """Collection of scores associated with route candidates."""

    items: list[RouteScore] = Field(
        ...,
        description="Scores for the evaluated route candidates",
    )


# === Route Response ===

class RouteResponse(BaseModel):
    """Response returned by the SafeNav API."""

    routes: RouteCandidates = Field(
        ...,
        description="Route candidates available to the user",
    )
    scores: Optional[RouteScores] = Field(
        None,
        description="Contextual scores when contextual evaluation was performed",
    )
    metadata: ResponseMetadata = Field(
        ...,
        description="Response metadata",
    )