@startuml
!include docs/uml/theme.puml
skinparam shadowing false
skinparam defaultTextAlignment center
skinparam defaultFontSize 12
skinparam ArrowFontSize 10
skinparam nodesep 80
skinparam ranksep 120
skinparam Linetype ortho
allowmixing

top to bottom direction


' ==================================
' ROUTING DTOs
' ==================================

class RouteRequest {
+ origin: GeoPoint
+ destination: GeoPoint
+ preferences: RoutePreferences
}

class RouteCandidates {
+ items: [RouteCandidate]
}

class RouteCandidate {
+ id: String
+ geometry: Polyline
+ eta: Number
+ distance: Number
}

class RouteResponse {
+ routes: RouteCandidates
+ scores: RouteScores [0..1]
+ metadata: ResponseMetadata
}

class RoutePreferences {
+ minimize_sun: Boolean
+ avoid_hazard_zones: Boolean
+ prioritize_speed: Boolean
+ comfort_weight: Float
}


' ==================================
' ROUTING GRAPH DTOs
' ==================================

class GraphData {
+ nodes: [GeoPoint]
+ edges: [Edge]
}

class Edge {
+ start: GeoPoint
+ end: GeoPoint
+ weight: Float
}


' ==================================
' CONTEXT REQUEST DTOs
' ==================================

class WeatherRequest {
+ area: Area
+ time: DateTime
}

class UrbanDataRequest {
+ area: Area
+ data_type: String
}


' ==================================
' CONTEXT DATA DTOs
' ==================================

class WeatherData {
+ temperature: Float
+ uv_index: Float
+ alert_level: String
}

class UrbanData {
+ shadow_zones: [Polygon]
+ water_points: [GeoPoint]
+ POIs: [POI]
}

class ContextDescription {
+ weather: WeatherData
+ urban: UrbanData
}


' ==================================
' CONTEXT EVALUATION DTOs
' ==================================

class RouteScores {
+ items: [RouteScore]
}

class RouteScore {
+ route_id: String
+ comfort_score: Float
+ safety_score: Float
+ segment_scores: [SegmentScore]
}

class SegmentScore {
+ segment_id: String
+ comfort: Float
+ safety: Float
}


' ==================================
' MAP VISUALIZATION DTOs
' ==================================

class MapData {
+ tiles: [Tile]
+ metadata: MapMetadata
}

class Tile {
+ id: String
+ bounds: Polygon
}

class MapMetadata {
+ source: String
+ date: DateTime
+ zoom_level: Int
}


' ==================================
' COMMON DTOs
' ==================================

class GeoPoint {
+ lat: Float
+ lon: Float
}

class Area {
+ center: GeoPoint
+ radius_m: Float
}

class Polyline {
+ coordinates: [GeoPoint]
}

class Polygon {
+ coordinates: [GeoPoint]
}

class POI {
+ id: String
+ name: String
+ type: String
+ location: GeoPoint
}

class ResponseMetadata {
+ timestamp: DateTime
+ request_id: String
+ source: String
}


' ==================================
' RELATIONSHIPS
' ==================================

' --- Routing ---
RouteRequest *-- GeoPoint : origin/destination
RouteRequest *-- RoutePreferences

RouteResponse *-- RouteCandidates
RouteResponse *-- RouteScores
RouteResponse *-- ResponseMetadata

RouteCandidates *-- RouteCandidate
RouteCandidate *-- Polyline


' --- Road graph ---
GraphData *-- GeoPoint
GraphData *-- Edge
Edge *-- GeoPoint : start/end


' --- Context requests ---
WeatherRequest *-- Area
UrbanDataRequest *-- Area


' --- Context description ---
ContextDescription *-- WeatherData
ContextDescription *-- UrbanData

UrbanData *-- Polygon : shadow zones
UrbanData *-- GeoPoint : water points
UrbanData *-- POI


' --- Evaluation ---
RouteScores *-- RouteScore
RouteScore *-- SegmentScore


' --- Map visualization ---
MapData *-- Tile
MapData *-- MapMetadata
Tile *-- Polygon


' --- Common geometry ---
Polyline *-- GeoPoint
Polygon *-- GeoPoint
POI *-- GeoPoint
Area *-- GeoPoint


hide empty members
skinparam classAttributeIconSize 0

@enduml